Fixing styles for homepage, quote page,
- Added video
- Adjusted style of buyModal to match page
- Amended style on homepage so that text doesn’t overlap with Award
section on mobile
- Adjusted index.js so video only fires on opening of video modal
rather than every modal

--- a/src/AppBundle/Resources/public/css/Default/quotePhone.css
+++ b/src/AppBundle/Resources/public/css/Default/quotePhone.css
@@ -174,16 +174,51 @@
 
 .download-now {
     background-color: #FFF;
-    padding: 100px 20px 100px 20px;
+    padding: 120px 20px 60px 20px;
     text-align: center;
     color: #202532;
-    min-height: 500px;
 }
 .download-now p {
     color: #626B78;
 }
-
 .modal-buy {
   background: rgba(0, 0, 0, 0.6);
   padding-top: 10%;
+}
+
+/* Video */
+
+.learn-video {
+  background-color: #FFF;
+  padding: 60px 20px 120px 20px;
+  text-align: center;
+}
+.learn-video .explainer-video {
+  margin-top: 20px;
+}
+@media (min-width: 992px) {
+  .learn-video .explainer-video-frame {
+    width: 450px;
+  }
+}
+
+/* Email Modal */
+#buyModal #lead_form_email {
+  padding: 5px 15px 5px 15px;
+  width: 300px;
+  margin-bottom: 0;
+  margin-top: 20px;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border: 2px solid #3399ff;
+}
+
+#buyModal #lead_form_save {
+  padding: 12px 30px;
+  border-radius: 30px;
+  -moz-border-radius: 30px;
+  -webkit-border-radius: 30px;
+  width: 155px;
 }
